Added about section

--- a/app/globals.css
+++ b/app/globals.css
@@ -121,8 +121,15 @@
   * {
     @apply border-border outline-ring/50;
   }
+  html,
   body {
     @apply bg-background text-foreground;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  html::-webkit-scrollbar,
+  body::-webkit-scrollbar {
+    display: none;
   }
   h1 {
     @apply text-4xl font-semibold leading-tight tracking-tight sm:text-5xl;
