Added experience section

--- a/app/globals.css
+++ b/app/globals.css
@@ -84,7 +84,7 @@
 }
 
 .dark {
-  --background: #0D0D0D;
+  --background: #151515;
   --foreground: oklch(0.985 0.002 247.839);
   --card: oklch(0.21 0.034 264.665);
   --card-foreground: oklch(0.985 0.002 247.839);
